0.6.5	UNRELEASED

 FIXES

  * Fix compatibility with bzr < 2.5 when used with remote repositories.
    (Jelmer Vernooij, #885566)

  * Fix git-import after branch refactoring. (Jelmer Vernooij, #886161)

0.6.4	2011-11-03

 FIXES

  * Fix and test fetching from "bzr serve --git". (Jelmer Vernooij)

  * Raise UnsupportedOperation for `Branch.revision_id_to_dotted_revno`,
    making it possible to run ``bzr tags`` against remote git repositories.
    (Jelmer Vernooij, #858942)

  * Fix compatibility with bzr < 2.5. (Jelmer Vernooij, #885566)

 FEATURES

  * Allow downloading branches over HTTP from loggerhead using the Git protocol.
    To enable, set 'http_git=True' in the branch configuration.
    (Jelmer Vernooij, #585822)

0.6.3	2011-11-01

 FIXES

  * Only actually fetch tags if "branch.fetch_tags" is set to true.
    (Jelmer Vernooij, #771184)

  * Add basic support for alternates. (Jelmer Vernooij)

  * Support addressing branches by ref where the name can't be mapped back to
    a branch. (Jelmer Vernooij, #829481)

  * Skip post commit hook when dulwich is not available.
    (Jelmer Vernooij, #853974)

  * Fix pushing from git repository to git repository.
    (Jelmer Vernooij, #731270)

  * Friendlier error message when HEAD can not be found in remote repository.
    (Jelmer Vernooij, #778920)

  * Support updating tags in remote branches. (Jelmer Vernooij, #706990)

  * Fix compatibility with tags API after changes in bzr.
    (Jelmer Vernooij, #861592)

  * Cope with tags pointing at trees when cloning local git repositories.
    (Jelmer Vernooij, #861973)

  * Remove pending entries when converting directory into tree reference.
    (Jelmer Vernooij, #871595)

  * Fix fetching into repositories with fallback repositories.
    (Jelmer Vernooij, #866028)

 FEATURES

  * Support the git http smart server protocol. (Jelmer Vernooij, #581933)

  * Support removal of remote branches. (Jelmer Vernooij, #855993)

  * Add i18n support. (Jelmer Vernooij)
