@@ -187,8 +187,8 @@ class TestGitBlackBox(ExternalBase):
         r.do_commit(ref="refs/heads/abranch", committer="Joe <joe@example.com>", message="Dummy")
         r.do_commit(ref="refs/heads/bbranch", committer="Joe <joe@example.com>", message="Dummy")
         self.run_bzr(["git-import", "a", "b"])
-        self.assertEquals(set(["abranch", "bbranch"]),
-                set(os.listdir("b/refs/heads")))
+        self.assertEquals(set(["abranch", "bbranch", ".bzr"]),
+                set(os.listdir("b")))
 
     def test_git_import_incremental(self):
         r = GitRepo.init("a", mkdir=True)
@@ -197,8 +197,7 @@ class TestGitBlackBox(ExternalBase):
         r.do_commit(ref="refs/heads/abranch", committer="Joe <joe@example.com>", message="Dummy")
         self.run_bzr(["git-import", "a", "b"])
         self.run_bzr(["git-import", "a", "b"])
-        self.assertEquals(set(["abranch"]),
-                set(os.listdir("b/refs/heads")))
+        self.assertEquals(set(["abranch", ".bzr"]), set(os.listdir("b")))
 
     def test_git_import_tags(self):
         r = GitRepo.init("a", mkdir=True)
@@ -207,6 +206,18 @@ class TestGitBlackBox(ExternalBase):
         cid = r.do_commit(ref="refs/heads/abranch", committer="Joe <joe@example.com>", message="Dummy")
         r["refs/tags/atag"] = cid
         self.run_bzr(["git-import", "a", "b"])
-        self.assertEquals(set(["abranch"]), set(os.listdir("b/refs/heads")))
-        b = Branch.open("b/refs/heads/abranch")
+        self.assertEquals(set(["abranch", ".bzr"]), set(os.listdir("b")))
+        b = Branch.open("b/abranch")
         self.assertEquals(["atag"], b.tags.get_tag_dict().keys())
+
+    def test_git_import_colo(self):
+        r = GitRepo.init("a", mkdir=True)
+        self.build_tree(["a/file"])
+        r.stage("file")
+        r.do_commit(ref="refs/heads/abranch", committer="Joe <joe@example.com>", message="Dummy")
+        r.do_commit(ref="refs/heads/bbranch", committer="Joe <joe@example.com>", message="Dummy")
+        self.make_bzrdir("b", format="development-colo")
+        self.run_bzr(["git-import", "a", "b"])
+        self.assertEquals(
+            [b.name for b in BzrDir.open("b").list_branches()],
+            ["abranch", "bbranch"])
