@@ -1,11 +1,20 @@
 0.6.5	UNRELEASED
 
+ CHANGES
+
+  * git-import no longer creates a deep hierarchy to store branches,
+    instead it now strips the refs/heads/ prefix from ref names.
+    (Jelmer Vernooij)
+
  FIXES
 
   * Fix compatibility with bzr < 2.5 when used with remote repositories.
     (Jelmer Vernooij, #885566)
 
   * Fix git-import after branch refactoring. (Jelmer Vernooij, #886161)
+
+  * git-import now creates colocated branches if the target bzrdir
+    supports them. (Jelmer Vernooij)
 
 0.6.4	2011-11-03
 
